<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/trending_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Display3"
        android:gravity="center"
        android:id="@+id/face"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="@drawable/button_bg"
        android:id="@+id/stock"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/buy"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:gravity="center"
        android:id="@+id/price"
        android:layout_above="@id/stock"
        android:layout_margin="16dp"
        />

</RelativeLayout>