...
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/trending_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/trending_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </android.support.v4.widget.SwipeRefreshLayout>
        <RelativeLayout
            android:id="@+id/trending_error"
...
